--- a/EnteKross/EnteKross.vcxproj.filters
+++ b/EnteKross/EnteKross.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="Keyboard.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
+    <ClCompile Include="Graphics.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Window.h">
@@ -48,6 +51,9 @@
       <Filter>Headerdateien</Filter>
     </ClInclude>
     <ClInclude Include="Keyboard.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="Graphics.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
   </ItemGroup>
