--- a/EnteKross/imgui.ini
+++ b/EnteKross/imgui.ini
@@ -4,7 +4,7 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=41,125
+Pos=39,131
 Size=694,359
 Collapsed=0
 
@@ -41,5 +41,10 @@ Collapsed=0
 [Window][Falloff]
 Pos=129,451
 Size=103,100
+Collapsed=0
+
+[Window][Chicken Tikka]
+Pos=6,12
+Size=278,59
 Collapsed=0
 
