--- a/EnteKross/EnteKross.vcxproj.filters
+++ b/EnteKross/EnteKross.vcxproj.filters
@@ -22,6 +22,9 @@
     <Filter Include="Bindables">
       <UniqueIdentifier>{f6cb814e-5165-4dea-a935-d4bbcd332d28}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Drawables">
+      <UniqueIdentifier>{3d884998-94e8-4318-a062-683be0c38776}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
@@ -71,6 +74,15 @@
     </ClCompile>
     <ClCompile Include="imgui_widgets.cpp">
       <Filter>ImGui</Filter>
+    </ClCompile>
+    <ClCompile Include="Drawable.cpp">
+      <Filter>Drawables</Filter>
+    </ClCompile>
+    <ClCompile Include="Cube.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="TransformCBuf.cpp">
+      <Filter>Quelldateien</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -156,6 +168,21 @@
       <Filter>Bindables</Filter>
     </ClInclude>
     <ClInclude Include="Topology.h">
+      <Filter>Bindables</Filter>
+    </ClInclude>
+    <ClInclude Include="Drawable.h">
+      <Filter>Drawables</Filter>
+    </ClInclude>
+    <ClInclude Include="Cube.h">
+      <Filter>Drawables</Filter>
+    </ClInclude>
+    <ClInclude Include="BindableBase.h">
+      <Filter>Bindables</Filter>
+    </ClInclude>
+    <ClInclude Include="ConstantBuffers.h">
+      <Filter>Bindables</Filter>
+    </ClInclude>
+    <ClInclude Include="TransformCBuf.h">
       <Filter>Bindables</Filter>
     </ClInclude>
   </ItemGroup>
