Static initialization of drawables

--- a/EnteKross/EnteKross.vcxproj.filters
+++ b/EnteKross/EnteKross.vcxproj.filters
@@ -191,6 +191,9 @@
     <ClInclude Include="Camera.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
+    <ClInclude Include="DrawableBase.h">
+      <Filter>Drawables</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="DXGetErrorDescription.inl">
