--- a/EnteKross/EnteKross.vcxproj
+++ b/EnteKross/EnteKross.vcxproj
@@ -154,6 +154,7 @@
     <ClCompile Include="KrossException.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Mouse.cpp" />
+    <ClCompile Include="Sphere.cpp" />
     <ClCompile Include="TransformCBuf.cpp" />
     <ClCompile Include="Window.cpp" />
   </ItemGroup>
@@ -186,6 +187,7 @@
     <ClInclude Include="KrossException.h" />
     <ClInclude Include="Mouse.h" />
     <ClInclude Include="PixelShader.h" />
+    <ClInclude Include="Sphere.h" />
     <ClInclude Include="Timer.h" />
     <ClInclude Include="Topology.h" />
     <ClInclude Include="TransformCBuf.h" />
