--- a/EnteKross/imgui.ini
+++ b/EnteKross/imgui.ini
@@ -48,3 +48,13 @@ Pos=6,12
 Size=278,59
 Collapsed=0
 
+[Window][Simulation]
+Pos=8,9
+Size=502,234
+Collapsed=0
+
+[Window][Box Dimensions]
+Pos=60,60
+Size=32,35
+Collapsed=0
+
