--- a/EnteKross/imgui.ini
+++ b/EnteKross/imgui.ini
@@ -49,12 +49,17 @@ Size=278,59
 Collapsed=0
 
 [Window][Simulation]
-Pos=8,9
-Size=502,234
+Pos=7,12
+Size=327,188
 Collapsed=0
 
 [Window][Box Dimensions]
 Pos=60,60
 Size=32,35
+Collapsed=0
+
+[Window][Batch]
+Pos=9,248
+Size=242,123
 Collapsed=0
 
